# my_vegas

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: VEGAS_Integrator.h  VEGAS_Integrator.inl  VEGAS_Stratify.h  VEGAS_map.h  VEGAS_map.inl  misc.h
src/: VEGAS_Integrator.cpp  VEGAS_Stratify.cpp  VEGAS_map.cpp
test/: CMakeLists.txt  VEGAS_Inter_test.cpp  VEGAS_map_test.cpp  benchmark.cpp  integrals.mat  integrands.h  performance_stuff.cpp  test_functions.cpp  test_integrands.cpp  test_integrands.h  test_misc.cpp  test_simple_functions.cpp
