cmake_minimum_required(VERSION 3.22)
PROJECT(ABS_VEGAS CXX)

SET(ABS_VEGAS "0.0.1")

LIST(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
#FIND_PACKAGE(ROOT REQUIRED)
INCLUDE_DIRECTORIES(include)
find_package(benchmark REQUIRED)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread -m64 -fsanitize=cfi -flto -fvisibility=hidden -g")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread -m64 -fsanitize=address -fsanitize=undefined -g")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -Werror")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2 -Wall -Wextra")

message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
message(STATUS "C++ compiler: ${CMAKE_CXX_COMPILER}")

FILE(GLOB ABS_VEGAS_SOURCE src/*.cpp)

# ====================================
# Build the libraries
# ====================================
# libABS_VEGAS.a
#ADD_LIBRARY(ABS_VEGAS_static STATIC ${ABS_VEGAS_SOURCE})
#SET_TARGET_PROPERTIES(ABS_VEGAS_static PROPERTIES LINKER_LANGUAGE CXX
#    VERSION ${ABS_VEGAS} OUTPUT_NAME ABS_VEGAS
#)
# TARGET_LINK_LIBRARIES(ABS_VEGAS_static ${GSL_LIBRARIES} ${Boost_LIBRARIES})

# libABS_VEGAS.so
#ADD_LIBRARY(ABS_VEGAS_shared SHARED ${ABS_VEGAS_SOURCE})
#SET_TARGET_PROPERTIES(ABS_VEGAS_shared PROPERTIES LINKER_LANGUAGE CXX
#    VERSION ${ABS_VEGAS} OUTPUT_NAME ABS_VEGAS
#)
# TARGET_LINK_LIBRARIES(ABS_VEGAS_shared ${GSL_LIBRARIES} ${Boost_LIBRARIES})


SET(ABS_VEGAS_LIBRARIES ABS_VEGAS_shared)

ADD_SUBDIRECTORY(test)
